--- a/Labs/Lab05/long-rocket/Cargo.toml
+++ b/Labs/Lab05/long-rocket/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.45"
-rocket = "0.5.0-rc.1"
+rocket = { version = "0.5.0-rc.1", features = [ "json" ], default-features = false }
+rocket_sync_db_pools = { version = "0.1.0-rc.1", features = [ "sqlite_pool" ], default-features = false }
+chrono = "0.4"
+serde = { version = "1.0", features = ["derive"] }
 
-[dependencies.rocket_dyn_templates]
-version = "0.1.0-rc.1"
-features = ["tera"]
