--- a/Labs/Lab06/myServices/Dependencies.toml
+++ b/Labs/Lab06/myServices/Dependencies.toml
@@ -7,6 +7,18 @@
 dependencies-toml-version = "2"
 
 [[package]]
+org = "adrian"
+name = "myServices"
+version = "0.1.0"
+dependencies = [
+	{org = "ballerina", name = "http"},
+	{org = "ballerinai", name = "observe"}
+]
+modules = [
+	{org = "adrian", packageName = "myServices", moduleName = "myServices"}
+]
+
+[[package]]
 org = "ballerina"
 name = "auth"
 version = "2.0.0"
@@ -266,18 +278,6 @@ dependencies = [
 ]
 modules = [
 	{org = "ballerinai", packageName = "observe", moduleName = "observe"}
-]
-
-[[package]]
-org = "jarre"
-name = "myServices"
-version = "0.1.0"
-dependencies = [
-	{org = "ballerina", name = "http"},
-	{org = "ballerinai", name = "observe"}
-]
-modules = [
-	{org = "jarre", packageName = "myServices", moduleName = "myServices"}
 ]
 
 
