--- a/Labs/Lab07/long-rocket/Cargo.toml
+++ b/Labs/Lab07/long-rocket/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = [ "json" ], default-features = false }
-rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = [ "sqlx_sqlite" ], default-features = true }
+rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = [ "sqlx_sqlite" ], default-features = false }
 sqlx =  { version = "0.5", default-features = false, features = ["macros", "offline", "migrate"] }
 
 [profile.release]
