--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -8,5 +8,13 @@ edition = "2021"
 [dependencies]
 actix-web = "4.0.0-beta.15"
 serde = "1"
-serde_json = "1"
 chrono = { version = "0.4", features = [ "serde" ] }
+cfg-if = "1.0"
+futures = "0.3"
+tokio = "1.15"
+once_cell = "1.9"
+parking_lot = "0.11"
+
+
+[dev-dependencies]
+serde_json = "1"
