--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.3"
 tokio = "1.15"
 once_cell = "1.9"
 parking_lot = "0.11"
-
-
-[dev-dependencies]
 serde_json = "1"
+log = "0.4"
+pretty_env_logger = "0.4"
+
