--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webhook"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,6 +18,7 @@ serde_json = "1"
 log = "0.4"
 pretty_env_logger = "0.4"
 mime = "0.3"
+reqwest = { version = "0.11", features = [ "json" ] }
 
 [features]
 
