--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -18,7 +18,7 @@ serde_json = "1"
 log = "0.4"
 pretty_env_logger = "0.4"
 mime = "0.3"
-reqwest = { version = "0.11", features = [ "json" ] }
+reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
 
 [features]
 
