--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0.0-beta.15"
-serde = "1"
+serde = { version = "1", features = [ "rc" ] }
 chrono = { version = "0.4", features = [ "serde" ] }
 cfg-if = "1.0"
 futures = "0.3"
@@ -19,6 +19,7 @@ log = "0.4"
 pretty_env_logger = "0.4"
 mime = "0.3"
 reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
+anyhow = "1.0"
 
 [features]
 
