impl own healthcheck

--- a/Labs/Lab08/webhook/Dockerfile
+++ b/Labs/Lab08/webhook/Dockerfile
@@ -11,11 +11,16 @@ WORKDIR /app
 # second stage
 FROM chef as planner
 
+
 # Prepare the recipe with that we can create the cash layer
 COPY . .
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef as builder
+
+# download build deps
+RUN apt-get update && apt-get install upx -y
+
 COPY --from=planner /app/recipe.json recipe.json
 
 # Precopile all the dependencies -> This cashes the docker layer
@@ -28,21 +33,21 @@ RUN cargo build --release --target x86_64-unknown-linux-musl
 # Strip
 RUN musl-strip /app/target/x86_64-unknown-linux-musl/release/webhook
 
+# Compress executable 
+RUN upx --best --ultra-brute  /app/target/x86_64-unknown-linux-musl/release/webhook
+
 # final stage
 FROM alpine as runtime
 
-# Copy the now builded file from the build image to q
+# Copy the now builded file from the build image to 
 # the current small one
 COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/webhook /usr/local/bin/
 
 # Prepare the db folder
 # Prepare the internally used user
 # Add curl so that the healthcheck will work
-RUN apk add --no-cache curl &&\
-	addgroup -S iuser &&\ 
-	adduser -S iuser -G iuser &&\
-	mkdir -p /db &&\
-	chown iuser /db
+RUN addgroup -S iuser &&\ 
+	adduser -S iuser -G iuser
 
 USER iuser
 
@@ -56,7 +61,7 @@ ENV ADDRESS="0.0.0.0" \
 EXPOSE ${IPORT}
 
 # healthcheck based on https://scoutapm.com/blog/how-to-use-docker-healthcheck
-HEALTHCHECK --interval=5s --timeout=3s CMD curl --fail http://$ADDRESS:$PORT/stats || exit 1
+HEALTHCHECK --interval=5s --timeout=3s CMD webhook --healthcheck
 
 CMD [ "webhook" ]
 
