--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "webhook"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
+authors = [ "Adrian Hornung", "SCAD-CLUELESS" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +13,6 @@ chrono = { version = "0.4", features = [ "serde" ] }
 cfg-if = "1.0"
 futures = "0.3"
 tokio = "1.15"
-once_cell = "1.9"
 parking_lot = "0.11"
 serde_json = "1"
 log = "0.4"
@@ -20,6 +20,7 @@ pretty_env_logger = "0.4"
 mime = "0.3"
 reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
 anyhow = "1.0"
+clap = { version = "3.0.0-rc.9", default-features = false, features = [ "derive", "std" ]}
 
 [features]
 
