make image smaller

--- a/Labs/Lab08/webhook/Dockerfile
+++ b/Labs/Lab08/webhook/Dockerfile
@@ -37,31 +37,22 @@ RUN musl-strip /app/target/x86_64-unknown-linux-musl/release/webhook
 RUN upx --best --ultra-brute  /app/target/x86_64-unknown-linux-musl/release/webhook
 
 # final stage
-FROM alpine as runtime
+FROM scratch as runtime
 
 # Copy the now builded file from the build image to 
 # the current small one
 COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/webhook /usr/local/bin/
 
-# Prepare the db folder
-# Prepare the internally used user
-# Add curl so that the healthcheck will work
-RUN addgroup -S iuser &&\ 
-	adduser -S iuser -G iuser
-
-USER iuser
-
 # Required ENV PATHS
 # define the needed internal port
-ARG IPORT=8000
 ENV ADDRESS="0.0.0.0" \
-	PORT=${IPORT}
+	PORT=8000
 
 # EXPOSE the internally used port to the outside world
 EXPOSE ${IPORT}
 
 # healthcheck based on https://scoutapm.com/blog/how-to-use-docker-healthcheck
-HEALTHCHECK --interval=5s --timeout=3s CMD webhook --healthcheck
+HEALTHCHECK --interval=5s --timeout=3s CMD ["webhook", "--healthcheck"]
 
 CMD [ "webhook" ]
 
