try faster allocator - and use unprivileged user in scratch

--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -22,6 +22,9 @@ reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-featu
 anyhow = "1.0"
 clap = { version = "3.0.0-rc.9", default-features = false, features = [ "derive", "std" ]}
 
+[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
+version = "0.3"
+
 [features]
 
 [profile.release]
