--- a/Labs/Lab08/webhook/Cargo.toml
+++ b/Labs/Lab08/webhook/Cargo.toml
@@ -7,16 +7,16 @@ authors = [ "Adrian Hornung", "SCAD-CLUELESS" ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.15"
+actix-web = "4.0.0-beta.16"
 serde = { version = "1", features = [ "rc" ] }
 chrono = { version = "0.4", features = [ "serde" ] }
 cfg-if = "1.0"
 futures = "0.3"
-tokio = "1.15"
+tokio = { version =  "1.15", default-features = false }
 parking_lot = "0.11"
 serde_json = "1"
 log = "0.4"
-pretty_env_logger = "0.4"
+env_logger="0.9"
 mime = "0.3"
 reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
 anyhow = "1.0"
